@@ -5,6 +5,7 @@
 	update: add OS, router, fibre switch dictionary entries for ticket 238 (by Aaron)
 	bugfix: do not produce PHP warning on LivePTR tab
 	bugfix: wrong port type set for WS-C2950-24. closes ticket 229 (by jthurman)
+	bugfix: improved IOS detection and fixed a logic error. closes ticket 232 (by jthurman)
 0.17.1 2009-06-03
 	bugfix: tags were not displayed on "File" page
 	bugfix: multiline comment for an added file was stored incorrectly
